Started modified expansion alg

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-/out/
 out/
 out/*
+/out/
 /out/*
+
 .idea/
 .idea/*
+/.idea/
+/.idea/*
+
 /out/production/livewire_java/*
 out/production/livewire_java/*
